--- a/.github/workflows/index.html
+++ b/.github/workflows/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Webpage</title>
+    <title>Katie & Lewis' Wedding</title>
 </head>
 <body>
-<h1>Hello, World!</h1>
+<h1>Katie And Lewis' Wedding</h1>
 </body>
 </html>
