More content updates

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 
     <div id="Tokyo" class="tabcontent">
     <h3>Q & A</h3>
-    <p class="question">Where is the wedding?</p>
+    <p>For any friends and family that have questions please read through our Q&A.</p>
+    <p class="question1">Where is the wedding?</p>
     <p>The Ceromony and reception will be held at the Farm Byron Bay</p>
     <p>11 Ewingsdale Road, Ewingsdale New South Wales 2481</p>
     <p class="question">What time should I get there?</p>
