--- a/index.html
+++ b/index.html
@@ -11,46 +11,56 @@
 <body>   
     <div class="container">
 <main>
-    <div class="middle">
-        <h1>Katie & Lewis</h1>
-    <div class="tab">
-        <button class="tablinks" onclick="openCity(event, 'London')">Home</button>
-        <button class="tablinks" onclick="openCity(event, 'Paris')">Schedule</button>
-        <button class="tablinks" onclick="openCity(event, 'Tokyo')">Q & A</button>
-        <button class="tablinks" onclick="openCity(event, 'RSVP')">RSVP</button>
+    <h1>Katie & Lewis</h1>
+    <div class="tabcontent">
+        <h3>Thursday 20 August 2026</h3>
+        <p>While our ceremony will be an intimate moment, we would love
+            for you to join us to celebrate our marriage
+        </p> 
     </div>
-
-    <div id="London" class="tabcontent">
-    <h3>Home</h3>
-    <p>This is the home page, this page will contain images of Lewis and
-        Katie and information about their lives.
-    </p>
+    <hr>
+    <div class="tabcontent">
+        <h3>Venue</h3>
+        <p>The Farm, 11 Ewingsdale Road, Ewingsdale, NSW</p>
     </div>
-
-    <div id="Paris" class="tabcontent">
-    <h3>Schedule</h3>
-    <p>3:00pm</p>
-    <p>Guests arrive</p>
+    <div class="tabcontent">
+        <h3>Schedule</h3>
+        <p>4:15pm - Guest arrival with drinks & canapes</p>
+        <p>4:30pm - Bride & Groom arrival </p>
+        <p>6:00pm - Dinner & cake</p>
+        <p>8:00pm to 10.30pm - Music & dancing</p>
     </div>
-
-    <div id="Tokyo" class="tabcontent">
-    <h3>Q & A</h3>
-    <p>For any friends and family that have questions please read through our Q&A.</p>
-    <p class="question1">Where is the wedding?</p>
-    <p>The Ceromony and reception will be held at the Farm Byron Bay</p>
-    <p>11 Ewingsdale Road, Ewingsdale New South Wales 2481</p>
-    <p class="question">What time should I get there?</p>
-    <p>Things kick off at 3pm</p>
-    <p class="question">What is the dress code?</p>
-    <p>Cocktail Attire</p>
-    <p class="question">Are Kids Welcome</p>
-    <p>As much as we love you little ones, We will not be including them in the Ceremony or Recption</p>
-
+    <div class="tabcontent">
+        <h3>RSVP</h3>
+        <p>We would love for you to join us!</p>
+        <p>Please RSVP below by 20 June 2026</p>
+        <button class="RSVPBut">RSVP</button>
     </div>
-    <div id="RSVP" class="tabcontent">
-    <h3>RSVP</h3>
-    <p>RSVP Page</p>
+    <div class="tabcontent">
+    <h3>Transport & Accomodation</h3>
+        <p>There is ample car parking available at the venue.</p>
+        <p>For those wishing to stay nearby, we have arranged a special rate at Elements of Byron.
+            Please use the code MARTINWEDDING which will apply for any length of stay from 18-21 August 2026.
+        </p>
+        <p>A bus will be available to transport guests from Elements of Byron to The Farm return. The bus will 
+            depart at 4pm sharp from Elements of Byron and will then return from The Farm at approximatley 11pm that night.</p>
     </div>
+    <div class="tabcontent">
+        <h3>Dress Code</h3>
+        <p>Our dress code is cocktail attire. It will be late winter, so we suggest you bring a jacket. There will be heaters 
+            to keep you cozy. We want everyone to feel comfortable. Dress to impress, but be ready to dance!</p>
+    </div>
+    <div class="tabcontent">
+        <h3>Q & A</h3>
+        <p class="question1">Can I bring a date?</p>
+        <p>Please check your invite for a plus one.</p>
+        <p class="question1">Are children welcome?</p>
+        <p>As much as we love your little ones, we kindly ask that you make childcare arrangements so you can relax and enjoy 
+            the celebration with us. </p>
+        <p class="question1">Can we take photos?</p>
+        <p>We would love for you to take photos and share them with us!</p>
+        <p class="question1">Gifts</p>
+        <p>We are truley grateful just to celebrate with you. But for those who wish to give, there will be a wishing well.</p>
     </div>
 </main>
 </div>
