--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <div class="tabcontent">
     <h3>Transport & Accomodation</h3>
         <p>There is ample car parking available at the venue.</p>
+        <p>If you prefer, you can pre-book a Taxi or Uber.</p>
         <p>For those wishing to stay nearby, we have arranged a special rate at Elements of Byron.
             Please use the code MARTINWEDDING which will apply for any length of stay from 18-21 August 2026.
         </p>
@@ -61,6 +62,7 @@
         <p>We would love for you to take photos and share them with us!</p>
         <p class="question1">Gifts</p>
         <p>We are truley grateful just to celebrate with you. But for those who wish to give, there will be a wishing well.</p>
+        <p class="question">If you have any further questions, please contact Katie on 0431 054 246</p>
     </div>
 </main>
 </div>
