--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
         <h3>RSVP</h3>
         <p>We would love for you to join us!</p>
         <p>Please RSVP below by 20 June 2026</p>
+        <a href="RSVP.html">
         <button class="RSVPBut">RSVP</button>
+        </a>
     </div>
     <div class="tabcontent">
     <h3>Transport & Accomodation</h3>
