--- a/RSVP.html
+++ b/RSVP.html
@@ -12,6 +12,27 @@
     <div class="container">
 <main>
     <p>RSVP Page</p>
+    <form action="sendEmail.php" method="POST" id="contactForm">
+        <h2>Contact Us</h2>
+        <div class="form-group">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
+        </div>
+        <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+        </div>
+        <div class="form-group">
+            <label for="subject">Subject:</label>
+            <input type="text" id="subject" name="subject" required>
+        </div>
+        <div class="form-group">
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" rows="6" required></textarea>
+        </div>
+        <div id="form-messages"></div>
+        <input type="submit" value="Send Message">
+    </form>
     </main>
 </div>
 <script src="index.js"></script>
