--- a/RSVP.html
+++ b/RSVP.html
@@ -11,7 +11,7 @@
 <body>   
     <div class="container">
 <main>
-    <p>RSVP Page</p>
+    <p>RSVP Page Updated</p>
    <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST" id="contactForm">
     <h2>Contact Us</h2>
     <div class="form-group">
