--- a/RSVP.html
+++ b/RSVP.html
@@ -11,25 +11,35 @@
 <body>   
     <div class="container">
 <main>
-    <p>RSVP Page Updated105</p>
    <form action="https://formspree.io/f/mdkdnpde" method="POST" id="contactForm">
-    <h2>Contact Us</h2>
+    <h2>RSVP</h2>
     <div class="form-group">
-        <label for="name">Name:</label>
+        <label for="name">Guest name(s):</label>
         <input type="text" id="name" name="name" required>
     </div>
+    <br>
     <div class="form-group">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="_replyto" required> </div>
+        <label for="attending">Attending:</label><br>
+        <sub_label for="yes">Yes</sub_label>
+        <input type="radio" id="yes" name="attending" value="Yes" required> <br>
+        <sub_label for="no">No</sub_label>
+        <input type="radio" id="no" name="attending" value="No" required> </div>
+        <br>
     <div class="form-group">
-        <label for="subject">Subject:</label>
-        <input type="text" id="subject" name="_subject" required> </div>
+        <label for="subject">Dietary restrictions or allergies?</label>
+        <textarea id="allergies" name="allergies" rows="6" required></textarea><br>
     <div class="form-group">
-        <label for="message">Message:</label>
-        <textarea id="message" name="message" rows="6" required></textarea>
+        <label for="message">Do you require a seat on the bus, departing from Elements?</label><br>
+         <sub_label for="yes">Yes</sub_label>
+        <input type="radio" id="yes" name="bus" value="Yes" required> <br>
+        <sub_label for="no">No</sub_label>
+        <input type="radio" id="no" name="bus" value="No" required> </div> <br>
+     <div class="form-group">
+        <label for="message">Do you have any song requests?</label>
+        <textarea id="Song" name="Song" rows="6" required></textarea>
     </div>
     <div id="form-messages"></div>
-    <input type="submit" value="Send Message">
+    <input class="RSVPBut" type="submit" value="Submit">
 </form>
     </main>
 </div>
