--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 <body>   
     <div class="container">
 <main>
-    <h1>Katie & Lewis Test</h1>
+    <h1>Katie & Lewis</h1>
     <div class="tabcontent">
         <h3>Thursday 20 August 2026</h3>
-        <p>While our ceremony will be an intimate moment, we would love
-            for you to join us to celebrate our marriage
+        <p>Mark your calendar and bring your dance moves, it’s going to be a celebration to remember!
         </p> 
     </div>
     <hr>
@@ -25,10 +24,13 @@
     </div>
     <div class="tabcontent">
         <h3>Schedule</h3>
-        <p>4:15pm - Guest arrival with drinks & canapes</p>
-        <p>4:30pm - Bride & Groom arrival </p>
+        <p></p>
+        <p>3:00pm - Guest arrival</p>
+        <p>3:30pm - Ceremony</p>
+        <p>4:30pm - Drinks and canapes</p>
         <p>6:00pm - Dinner & cake</p>
-        <p>8:00pm to 10.30pm - Music & dancing</p>
+        <p>7:30pm - Music & dancing</p>
+        <p>10:45pm - Guest departure</p>
     </div>
     <div class="tabcontent">
         <h3>RSVP</h3>
@@ -43,27 +45,31 @@
         <p>There is ample car parking available at the venue.</p>
         <p>If you prefer, you can pre-book a Taxi or Uber.</p>
         <p>For those wishing to stay nearby, we have arranged a special rate at Elements of Byron.
-            Please use the code MARTINWEDDING which will apply for any length of stay from 18-21 August 2026.
+            Please use the code MARTINWEDDING which will apply for any length of stay from 18 to 21 August 2026.
         </p>
         <p>A bus will be available to transport guests from Elements of Byron to The Farm return. The bus will 
-            depart at 4pm sharp from Elements of Byron and will then return from The Farm at approximatley 11pm that night.</p>
+            depart at 2.30pm sharp from Elements of Byron and will then return from The Farm at approximatley 11pm that night.</p>
     </div>
     <div class="tabcontent">
         <h3>Dress Code</h3>
-        <p>Our dress code is cocktail attire. It will be late winter, so we suggest you bring a jacket. There will be heaters 
+        <p>Our dress code is cocktail attire. The ceremony will be on grass, please wear suitable footwear. It will be late winter, so we suggest you bring a jacket. There will be heaters 
             to keep you cozy. We want everyone to feel comfortable. Dress to impress, but be ready to dance!</p>
     </div>
     <div class="tabcontent">
         <h3>Q & A</h3>
+         <p class="question1">Where will the ceremony and reception be?</p>
+        <p>The ceremony and reception will take place at The Farm. When you arrive at 3:00pm you will be guided down to the macadamia orchard for the ceremony. This is a short walk - 
+if walking isn’t ideal, just let us know, a car can be arranged to take you to and from the orchard.
+        </p>
         <p class="question1">Can I bring a date?</p>
         <p>Please check your invite for a plus one.</p>
         <p class="question1">Are children welcome?</p>
         <p>As much as we love your little ones, we kindly ask that you make childcare arrangements so you can relax and enjoy 
-            the celebration with us. </p>
+            the day with us. </p>
         <p class="question1">Can we take photos?</p>
-        <p>We would love for you to take photos and share them with us!</p>
+        <p>We kindly ask for no phones or cameras during the ceremony, but after that, feel free to capture the fun and share your photos with us!</p>
         <p class="question1">Gifts</p>
-        <p>We are truley grateful just to celebrate with you. But for those who wish to give, there will be a wishing well.</p>
+        <p>Your presence on the day is the greatest gift. For those who wish to gift, there will be a wishing well.</p>
         <p class="question">If you have any further questions, please contact Katie on 0431 054 246</p>
     </div>
 </main>
