--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="tabcontent">
         <h3>RSVP</h3>
         <p>We would love for you to join us!</p>
-        <p>Please RSVP below by 20 June 2026</p>
+        <p>Please RSVP by 1 May 2026</p>
         <a href="RSVP.html">
         <button class="RSVPBut">RSVP</button>
         </a>
@@ -48,7 +48,7 @@
             Please use the code MARTINWEDDING which will apply for any length of stay from 18 to 21 August 2026.
         </p>
         <p>A bus will be available to transport guests from Elements of Byron to The Farm return. The bus will 
-            depart at 2.30pm sharp from Elements of Byron and will then return from The Farm at approximatley 11pm that night.</p>
+            depart sharply at 2.30pm from Elements of Byron and will then return from The Farm at approximatley 11pm that night.</p>
     </div>
     <div class="tabcontent">
         <h3>Dress Code</h3>
