--- a/RSVP.html
+++ b/RSVP.html
@@ -26,14 +26,14 @@
         <input type="radio" id="no" name="attending" value="No" required> </div>
         <br>
     <div class="form-group">
-        <label for="subject">Dietary restrictions or allergies?</label>
+        <label for="subject">Dietary restrictions or allergies? Test</label>
         <textarea id="allergies" name="allergies" rows="6" required></textarea><br>
     <div class="form-group">
         <label for="message">Do you require a seat on the bus, departing from Elements or Discovery Parks?</label><br>
          <sub_label for="yes">Yes - Elements of Byron</sub_label>
-        <input type="radio" id="yes" name="bus" value="Yes" required> <br>
+        <input type="radio" id="yes - Elements of Byron" name="bus" value="Yes - Elements of Byron" required> <br>
         <sub_label for="yes">Yes - Discovery Parks</sub_label>
-        <input type="radio" id="yes" name="bus" value="Yes" required> <br>
+        <input type="radio" id="yes - Discovery Parks" name="bus" value="Yes - Discovery Parks" required> <br>
         <sub_label for="no">No</sub_label>
         <input type="radio" id="no" name="bus" value="No" required> </div> <br>
      <div class="form-group">
@@ -43,16 +43,16 @@
     <div id="form-messages"></div>
         <div class="form-group">
         <label for="message">Are you attending the Welcome Dinner?</label><br>
-         <sub_label for="yes">Yes</sub_label>
-        <input type="radio" id="yes" name="bus" value="Yes" required> <br>
+        <sub_label for="yes">Yes</sub_label>
+        <input type="radio" id="yes" name="dinner" value="Yes" required> <br>
         <sub_label for="no">No</sub_label>
-        <input type="radio" id="no" name="bus" value="No" required> </div>
+        <input type="radio" id="no" name="dinner" value="No" required> </div>
         <div class="form-group"> <br>
         <label for="message">Are you attending the Recovery Brunch?</label><br>
          <sub_label for="yes">Yes</sub_label>
-        <input type="radio" id="yes" name="bus" value="Yes" required> <br>
+        <input type="radio" id="yes" name="brunch" value="Yes" required> <br>
         <sub_label for="no">No</sub_label>
-        <input type="radio" id="no" name="bus" value="No" required> </div>
+        <input type="radio" id="no" name="brunch" value="No" required> </div>
     <input class="RSVPBut" type="submit" value="Submit">
 </form>
     </main>
