--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>   
     <div class="container">
 <main>
-    <h1>Katie & Lewis</h1>
+    <h1>Lewis & Katie</h1>
     <img class="titleimage" src="Images/Farm House.png" alt="Farm House">
     <div class="tabcontent">
         <h3>Thursday 20 August 2026</h3>
@@ -60,9 +60,9 @@
             </p>Check-in is from 2:00pm - ideal for guests staying just one night.</p>
         <h4>Guest Bus Transfers</h4>
          <p>A return bus service will operate between Elements, Discovery Parks and The Farm.</p>
-         <p>2:30pm: Bus to depart from Elements of Byron</p>
-         <p>2:40pm: Bus to depart from Discovery Parks</p>
-         <p>10:45pm: Bus to depart from The Farm with drop-offs at Discovery Parks and Elements of Byron</p>
+         <p>2:30pm - Bus to depart from Elements of Byron</p>
+         <p>2:40pm - Bus to depart from Discovery Parks</p>
+         <p>10:45pm - Bus to depart from The Farm with drop-offs at Discovery Parks and Elements of Byron</p>
       
         
     </div>
