--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Katie & Lewis</title>
+    <title>Lewis & Katie</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
 </head>
@@ -12,12 +12,11 @@
     <div class="container">
 <main>
     <h1>Lewis & Katie</h1>
+    <img class="heartimg" src="Images/heart line.png" alt="Heart Seperator">
     <img class="titleimage" src="Images/Farm House.png" alt="Farm House">
     <div class="tabcontent">
         <h3>Thursday 20 August 2026</h3>
-        
     </div>
-    <hr>
     <div class="tabcontent">
         <h3>VENUE</h3>
         <p>The Farm Byron Bay</p>
@@ -55,9 +54,8 @@
         <p>Use the code MARTINWEDDING for any stay between 18 to 21 August 2026. 
             Check-in is from 3:00pm.</p>
         <h4>Discovery Parks Byron Bay</h4>
-         <p>Use the code LOVETT26 for any length of stay. 
-            Bookings must be made by 28 February 2026 to access this promo code.</p>
-            </p>Check-in is from 2:00pm - ideal for guests staying just one night.</p>
+         <p>Use the code LOVETT26 for any length of stay. Bookings must be made by 28 February 2026 to access this promo code.</p>
+        <p>Check-in is from 2:00pm - ideal for guests staying just one night.</p>
         <h4>Guest Bus Transfers</h4>
          <p>A return bus service will operate between Elements, Discovery Parks and The Farm.</p>
          <p>2:30pm - Bus to depart from Elements of Byron</p>
