--- a/RSVP.html
+++ b/RSVP.html
@@ -13,6 +13,8 @@
 <main>
    <form action="https://formspree.io/f/mdkdnpde" method="POST" id="contactForm">
     <h2>RSVP</h2>
+    <img class="heartimgRSVP" src="Images/heart line.png" alt="Heart Seperator">
+    <img class="titleimage" src="Images/Farm House.png" alt="Farm House">
     <div class="form-group">
         <label for="name">Guest name(s):</label>
         <input type="text" id="name" name="name" required>
@@ -25,7 +27,7 @@
         <br>
     <div class="form-group">
         <label for="subject">Dietary restrictions or allergies?</label>
-        <textarea id="allergies" name="allergies" rows="6" required></textarea><br>
+        <textarea id="allergies" name="allergies" rows="6"></textarea><br>
     <div class="form-group">
         <label for="message">Do you require a seat on the bus, departing from Elements or Discovery Parks?</label><br>
         <input type="radio" id="yes - Elements of Byron" name="bus" value="Yes - Elements of Byron" required> Yes - Elements of Byron<br>
@@ -33,7 +35,7 @@
         <input type="radio" id="no" name="bus" value="No" required> No</div> <br>
      <div class="form-group">
         <label for="message">Do you have any song requests?</label>
-        <textarea id="Song" name="Song" rows="6" required></textarea>
+        <textarea id="Song" name="Song" rows="6"></textarea>
     </div>
     <div id="form-messages"></div>
         <div class="form-group">
@@ -44,8 +46,11 @@
         <label for="message">Are you attending brunch on Friday morning?</label><br>
         <input type="radio" id="yes" name="brunch" value="Yes" required>Yes<br>
         <input type="radio" id="no" name="brunch" value="No" required>No</div><br>
+    <div class="buttonCenter">
     <input class="RSVPBut" type="submit" value="Submit">
+    </div>
 </form>
+<div class="bottomSpace"></div>
     </main>
 </div>
 <script src="index.js"></script>
