Heart image fix

--- a/RSVP.html
+++ b/RSVP.html
@@ -13,7 +13,7 @@
 <main>
    <form action="https://formspree.io/f/mdkdnpde" method="POST" id="contactForm">
     <h2>RSVP</h2>
-    <img class="heartimgRSVP" src="Images/heart line.png" alt="Heart Seperator">
+    <img class="heartimgRSVP" src="Images/Heart line.png" alt="Heart Seperator">
     <img class="titleimage" src="Images/Farm House.png" alt="Farm House">
     <div class="form-group">
         <label for="name">Guest name(s):</label>
