--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
 <main>
     <h1>Lewis & Katie</h1>
-    <img class="heartimg" src="Images/heart line.png" alt="Heart Seperator">
+    <img class="heartimg" src="Images/Heart line.png" alt="Heart Seperator">
     <img class="titleimage" src="Images/Farm House.png" alt="Farm House">
     <div class="tabcontent">
         <h3>Thursday 20 August 2026</h3>
