--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <p>Use the code MARTINWEDDING for any stay between 18 to 21 August 2026. 
             Check-in is from 3:00pm.</p>
         <h4>Discovery Parks Byron Bay</h4>
-         <p>Use the code LOVETT26 for any length of stay. Bookings must be made by 28 February 2026 to access this promo code.</p>
+         <p>Use the code LOVETT26 for any length of stay. Bookings must be made by 30 April 2026 to access this promo code.</p>
         <p>Check-in is from 2:00pm - ideal for guests staying just one night.</p>
         <h4>Guest Bus Transfers</h4>
          <p>A return bus service will operate between Elements, Discovery Parks and The Farm.</p>
@@ -72,7 +72,7 @@
         <h3>DRESS CODE</h3>
         <p>Cocktail Attire</p>
         <p>The ceremony will take place on grass, so please choose suitable footwear.
-        <p>As it will be late winter, we suggest bringing a jacket - heaters will be provided to keep you cozy.</p>
+        <p>As it will be late winter, we suggest bringing a jacket. Heaters will be provided to keep you cozy.</p>
 
         
     </div>
